# era5-fetch

./: .gitignore  README.md  pyproject.toml  run.py
era5_backend/: README.md  app.py  requirements.txt
era5_backend/api/: download_routes.py  health_routes.py  queue_routes.py  status_routes.py
era5_backend/core/: config.py  env.py  hashing.py  logger.py
era5_backend/services/: downloader.py  file_service.py  manifest_manager.py  queue_service.py  scheduler.py
era5_fetch/: .gitignore  __init__.py  app.py
era5_fetch/api/: download_routes.py  health_routes.py  queue_routes.py  status_routes.py
era5_fetch/core/: checksums.py  config.py  env.py  locks.py  logger.py  validation.py
era5_fetch/services/: downloader.py  file_service.py  manifest_manager.py  queue_service.py  scheduler.py
tests/: test_era5_backend.py  test_era5_fetch.py
