[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "era5-backend"
version = "1.0.0"
description = "Reusable ERA5-Land monthly hydrology downloader and cache backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0,<4.0",
    "cdsapi>=0.7,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
era5-backend = "era5_backend.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["era5_backend*"]

[tool.setuptools.package-data]
era5_backend = ["storage/manifest.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

